# microphone-module

./: .gitignore  LICENSE  README.md  README.ru.md
components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild
components/hardware_driver/boards/esp32s3-custom/: bsp_board.c
components/hardware_driver/boards/esp32s3-custom-2mic/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h  esp32_s3_custom_2mic.h  esp32_s3_custom_board.h
examples/voice_activity_detection/: README.md  README.ru.md
module/: CMakeLists.txt  README.md  README.ru.md  partitions.csv  sdkconfig.defaults.esp32s3
module/audio_tools/: audio_tools.c  audio_tools.h
module/i2s/: i2s_input.c  i2s_input.h
module/main/: CMakeLists.txt  idf_component.yml  main.c
module/network/: network_stream.c  network_stream.h
module/sd_card/: sdcard.c  sdcard.h
pcb/: PCB-microphone-module-2025-06-26-Easy-EDA.json  README.md  README.ru.md  SCH-microphone-module-2025-06-26-Easy-EDA.json  SCH-microphone-module-2025-06-26.schdoc
server/: README.md  README.ru.md  requirements.txt  server.py
